2008-06-28  Laurent Debacker <debackerl@gmail.com> 

	* MainWindow.cs: Updated sample to show menu opening in app menu

2008-06-28  Laurent Debacker <debackerl@gmail.com> 

	* MainWindow.cs: Update sample to showcase advance in app menu
	  implementation

2008-06-27  Laurent Debacker <debackerl@gmail.com> 

	* MainWindow.cs: Update sample

2008-06-23  Laurent Debacker <debackerl@gmail.com> 

	* MainWindow.cs: Updated sample

2007-12-29  Laurent Debacker <debackerl@gmail.com> 

	

2007-12-28  Laurent Debacker <debackerl@gmail.com> 

	* MainWindow.cs, ChangeLog: Fixing calls to Dispose() and Destroy()
