@@ -9,7 +9,8 @@ namespace Sample
 		{
 			Console.WriteLine ("Starting ...");
 			Application.Init ();
-			MainWindow win = new MainWindow ();
+			//MainWindow win = new MainWindow ();
+			VariantsCombinaisonTest win = new VariantsCombinaisonTest ();
 			win.Show ();
 			Application.Run ();
 		}
