@@ -18,6 +18,8 @@
     <File name="AssemblyInfo.cs" subtype="Code" buildaction="Compile" />
     <File name="MainWindow.cs" subtype="Code" buildaction="Compile" />
     <File name="SampleTile.cs" subtype="Code" buildaction="Compile" />
+    <File name="DropdownGroupTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="VariantsCombinaisonTest.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="gtk-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
